--- a/index.html
+++ b/index.html
@@ -1,14 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Calculadora de Calorías</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Calculadora de Calorías</h1>
+        <div class="user-input">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre">
 
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido">
 
+            <label for="peso">Peso (kg):</label>
+            <input type="number" id="peso" step="0.1">
+
+            <label for="altura">Altura (cm):</label>
+            <input type="number" id="altura">
+
+            <label for="edad">Edad:</label>
+            <input type="number" id="edad">
+
+            <label for="genero">Género:</label>
+            <select id="genero">
+                <option value="masculino">Masculino</option>
+                <option value="femenino">Femenino</option>
+            </select>
+
+            <label for="nivelActividad">Nivel de Actividad:</label>
+            <select id="nivelActividad">
+                <option value="sedentario">Sedentario</option>
+                <option value="ligero">Ligero</option>
+                <option value="moderado">Moderado</option>
+                <option value="activo">Activo</option>
+                <option value="muyActivo">Muy Activo</option>
+            </select>
+
+            <label for="objetivo">Objetivo:</label>
+            <select id="objetivo">
+                <option value="volumen">Volumen</option>
+                <option value="definicion">Definición</option>
+            </select>
+
+            <button onclick="registrarUsuario()">Calcular</button>
+        </div>
+        <div class="results">
+            <h2>Resultados de los Usuarios</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Peso</th>
+                        <th>Altura</th>
+                        <th>Edad</th>
+                        <th>Género</th>
+                        <th>Nivel de Actividad</th>
+                        <th>Objetivo</th>
+                        <th>Calorías de Mantenimiento</th>
+                        <th>Calorías Objetivo</th>
+                    </tr>
+                </thead>
+                <tbody id="resultados"></tbody>
+            </table>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
